--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,36 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to AI Insights Hub
+description: Unveiling AI News with Clarity and Solutions
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Unveiling AI News with Clarity and Solutions
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Start Reading
+      link: /start
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: Join the Discord Community
+      link: https://discord.gg/WwhWRKdqeW
+      icon: discord
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Subjects
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+	<Card title="AI News" icon="rocket">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Add new content" icon="add-document">
+	<Card title="Techincal Principles Analyst" icon="add-document">
 		Add Markdown or MDX files to `src/content/docs` to create new pages.
 	</Card>
-	<Card title="Configure your site" icon="setting">
+	<Card title="AI Apps Manual Guides" icon="setting">
 		Edit your `sidebar` and other config in `astro.config.mjs`.
 	</Card>
 	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+		Start to read [here](/openai/sora/)!.
 	</Card>
 </CardGrid>
