docs: modify content

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,15 +22,15 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="AI News" icon="rocket">
-		Edit `src/content/docs/index.mdx` to see this page change.
+		We provide the latest AI news and updates.
 	</Card>
 	<Card title="Techincal Principles Analyst" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+		The AI industry is ever-changing. Only by understanding the underlying principles can we predict the future.
 	</Card>
 	<Card title="AI Apps Manual Guides" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+		Simply reading about AI isn't enough to master it; we'll also provide the most straightforward and easy-to-understand AI tutorials to ensure practical proficiency.
 	</Card>
 	<Card title="Read the docs" icon="open-book">
-		Start to read [here](/openai/sora/)!.
+		Start to read [here](/start/)!.
 	</Card>
 </CardGrid>
